--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>   -->
 </head>
 <body>
     <main  class="wow fadeIn"  style="visibility: visible;">
@@ -26,12 +28,12 @@
                     <div class="R1 L_cmn01">
                         <p>Follow us :-  
                         <a href="#"><i class="fab fa-facebook"></i></a> 
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
                         <a href="#" class="insta">
                             <i class="fab fa-instagram"></i>
                         <!-- <i> <img src="image/instagram.png" alt="img"></i>    -->
                         </a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <!-- <a href="#"><i class="fab fa-youtube"></i></a> -->
                         </p>
                     </div>
                  </div> 
@@ -40,7 +42,7 @@
                 <nav> 
                     <div class="logo nav_cmn">
                         <a href="index.html">
-                            <img src="image/logo3.png" alt="image">
+                            <img src="image/logo04png.png" alt="image" title="Cosset world">
                         </a>
                     </div>
                     <div class="nav-item nav_cmn myHeader">
@@ -351,7 +353,8 @@
             <div class="container">
                 <div class="Service_heading">
                     <h2>Our<span> Services</span></h2>
-                    <p>We at COSSET WORLD  takes complete care of your health and wellness. We believe it is of utmost importance to take care of oneself.</p>
+                  <p>We at Cosset World utterly take care of your health and wellness. We have the best  
+                      <b style="color: #000;font-weight: bold;">skin specialist in Gurgaon, </b>serving you to perfection.</p>
                 </div>
                 <div class="Service_content">
                     <div class="Grid_wrp">
@@ -359,7 +362,7 @@
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Dermat</h2>
-                                    <p>Be Beautiful With Our Services</p>
+                                    <p>Age is just a number when you look young</p>
                                     <a href="botox.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
@@ -372,7 +375,7 @@
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Skin</h2>
-                                    <p>Be Beautiful With Our Services</p>
+                                    <p>Light up with your beautiful skin</p>
                                     <a href="skintreatment.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
@@ -385,7 +388,7 @@
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>permanent   makeup</h2>
-                                    <p>Be Beautiful With Our Services</p>
+                                    <p>Makeup was never so easy</p>
                                     <a href="premanentmakeup.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
@@ -398,7 +401,7 @@
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Slimming</h2>
-                                    <p>Be Beautiful With Our Services</p>
+                                    <p>Let those curves speak for you</p>
                                     <a href="slimming.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
@@ -411,7 +414,7 @@
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Hair Care</h2>
-                                    <p>Be Beautiful With Our Services</p>
+                                    <p>Shine those thick and healthy hairs</p>
                                     <a href="hairtransplant.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
@@ -434,9 +437,15 @@
              <div class="container">
                  <div class="About_Content">
                       <div class="Abt_left Abt_cmn01">
-                          <h2>About <span>Cosset World</span></h2>
-                          <p>The Cosset World is one of North India's oldest and well-established companies specializing in Wellness, Cosmetic Dermatology, and Aesthetic Care. We are dedicated to helping clients with wellness concerns like non-invasive fat-loss, inch-loss, and body contouring procedures to cosmetic anti-aging skincare solutions like facial skin, skincare, fillers, and laser rejuvenation.</p>
-                          <a href="javascript:void(0)" class="hvr-bounce-to-right">Read more</a>
+                          <h2>Dr. Rupali <span>Chauhan</span></h2>
+                           <p>
+                             A well-established firm, serving patients all over from north India. We believe in the concept of earning trust through remarkable services. We constantly endeavour to provide honest health solution and advice for you and your family. According to the trends, we adapt ourselves quickly and deliver extraordinarily high-quality services. People walking into our Clinic with all skin and hair related infirmities like acne scars and hair loss are all advice to book an appointment immediately. 
+                           </p>
+                          <!-- <a href="javascript:void(0)" class="hvr-bounce-to-right">Read more</a> -->
+                           <p style="font-weight:bold;color:#000;">Skin Specialist Gurgaon</p>
+                          <p>Start your journey towards holistic wellbeing with <b style="color: #000;font-weight: bold;">Dr Rupali Chauhan.</b> In the early days of her professional life, when she joined her first hospital, she realised that dealing with the pathological condition is secondary, ‘FIRST’ we need to maintain our physiological balance that is MIND, BODY and SOUL. </p>
+                         <p>She has completed her training and practice at the best institutes in India and Internationally.  Regarded as the <b style="color: #000;font-weight: bold;"> Best Dermatologist in Gurgaon,</b> she has achieved trusts of thousands with her knowledge and her skills. </p>
+                        <p>Linking herself to the best hospitals in Gurgaon she is well reputed among the Dermatologists. She has a good number of journals and publications in her name. Attending national and international seminars, conferences and workshops frequently, she upgrades her knowledge and skills. She is a trainer and a practitioner for anti-ageing, anti-wrinkles and face lifting methods. She has gained colossal experience in the field of dermatology and plastic surgery. </p>
                         </div>
                       <div class="Abt_right Abt_cmn01">
                           <img src="image/About01.png" alt="image">
@@ -459,7 +468,8 @@
                         </div>
                         <div class="Apt_right Apt_Cmn01">
                             <h2>Book an <span>Appointment</span></h2>
-                            <p>What can be more exciting. Get Free Consultation with our dermatologists, weight-loss specialists and nutritionists - every time! . Call us to book an appointment at our clinic</p>
+                            <p>We are always excited to hear from you. Book an appointment for the <b style="color: #000;font-weight: bold;">best Dermatologist in Gurgaon </b>
+                                for weight-loss and nutritional benefits. Give us a call or fill the form to book an appointment now.</p>
                             <a  data-scroll  href="#Appointment_Form_wrp">Book an Appointment</a>
                         </div>
                     </div>
@@ -480,36 +490,30 @@
                         <ul>
                             <li class="Tst01 Tst_cmn02">
                                 <figure>
-                                    <img data-tilt data-tilt-full-page-listening src="image/tst1.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst01.jpg" alt="image">
                                 </figure>
                                 <p>  
-                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Eveniet omnis architecto possimus, provident veniam natus ut.
-                                    Nobis soluta obcaecati id."
+                                    Constantly loosing hair turned into my scariest nightmare, doctors suggested me a hair transplant. I was literally worried about my hair transplant at first. But Cosset World did it so perfectly that I am left with no word to thank them. 
                                 </p>
-                                <h2>Alina Mathew</h2>
+                                <h2>Rahul Upadhyaya</h2>
                             </li>
                             <li class="Tst02 Tst_cmn02">
                                 <figure>
-                                    <img data-tilt data-tilt-full-page-listening src="image/tst2.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst2.jpg" alt="image">
                                 </figure>
                                 <p>  
-                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Eveniet omnis architecto possimus, provident veniam natus ut.
-                                    Nobis soluta obcaecati id."
+                                    Due to daily's busy routine and lack of sleep, I lost my skin's glow. Thanks to Cosset World for suggesting and treating me with a skin whitening treatment. I recovered my radiance and confidence back.
                                 </p>
-                                <h2>Alina Mathew</h2>
+                                <h2>Maya Pandey</h2>
                             </li>
                             <li class="Tst03 Tst_cmn02">
                                 <figure>
-                                    <img data-tilt data-tilt-full-page-listening src="image/tst3.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst3.jpg" alt="image">
                                 </figure>
                                 <p>  
-                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Eveniet omnis architecto possimus, provident veniam natus ut.
-                                    Nobis soluta obcaecati id."
+                                    I was fade up of waxing and shaving so often. One of my friends suggested me to visit Cosset World for laser hair removal. To my surprise, the whole process was really smooth and quick. I don't need to worry about bodily hair anymore.
                                 </p>
-                                <h2>Alina Mathew</h2>
+                                <h2>Aisha Sharma</h2>
                             </li>
                         </ul>
                     </div>
@@ -655,26 +659,23 @@
                 <div class="Ft01 Ft_cmn01" >
                     <h2>QUICK LINKS</h2>
                     <ul>
-                        <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li> 
-                        <li><a href = "botox.html"class="hvr-underline-from-left" >Botox </a></li>
-                        <li><a href = "filler.html"class="hvr-underline-from-left" >Fillers</a></li>
-                        <li><a href = "thread.html"class="hvr-underline-from-left" >Thread lift</a></li>
-                        <li><a href = "slimming.html"class="hvr-underline-from-left" >Tummy tucks</a></li>
-                        <li><a href = "contact.html"class="hvr-underline-from-left" >Contact us</a></li>
-                        <li><a href = "privacy.html"class="hvr-underline-from-left" >Privacy policy</a></li>
-                        <li><a href = "terms.html"class="hvr-underline-from-left" >Terms & condition</a></li>
+                        <li><a href = "botox.html"class="hvr-underline-from-left" >Botox Treatment In Gurgaon  </a></li> 
+                        <li><a href = "hairlaser.html"class="hvr-underline-from-left" >Laser Hair Removal In Gurgaon  </a></li>
+                        <li><a href = "hairtransplant.html"class="hvr-underline-from-left" >Hair Transplant In Gurgaon </a></li>
+                        <li><a href = "scalp.html"class="hvr-underline-from-left" >Hair Specialist In Gurgaon </a></li>
+                        <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Skin Laser Treatment In Gurgaon</a></li> 
                     </ul>
                 </div>
                 <div class="Ft02 Ft_cmn01">
                 <h2>SERVICES </h2>
                 <ul>
-                    <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Beauty  </a></li> 
-                    <li><a href = "slimming.html"class="hvr-underline-from-left" >Slimming  </a></li>
-                    <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li>
-                    <li><a href = "premanentmakeup.html"class="hvr-underline-from-left" >Permanent </a></li>
-                    <li><a href = "filler.html"class="hvr-underline-from-left" >Dermat </a></li>
-                    <li><a href = "slimming.html"class="hvr-underline-from-left" >Figure Correction  </a></li>
-                    <li><a href = "hairlaser.html"class="hvr-underline-from-left" >Hair Treatments </a></li>
+                    <li><a href = "thread.html"class="hvr-underline-from-left" >Thread Lift  </a></li> 
+                    <li><a href = "filler.html"class="hvr-underline-from-left" >Fillers Treatment   </a></li>
+                    <li><a href = "microderma.html"class="hvr-underline-from-left" >Microdermabrasion Treatment  </a></li>
+                    <li><a href = "hairpigment.html"class="hvr-underline-from-left" >Hair Pigmentation </a></li>
+                    <li><a href = "prpface.html"class="hvr-underline-from-left" >Prp Face Treatment </a></li>
+                    <li><a href = "cosmo.html"class="hvr-underline-from-left" >Cosmedermat Treatments    </a></li>
+                    <li><a href = "premanentmakeup.html"class="hvr-underline-from-left" >Permanent Makeup  </a></li>
                 </ul>
             </div>
             <div class="Ft03 Ft_cmn01">
@@ -696,13 +697,13 @@
                     <li> <p><i class="fas fa-phone-alt"></i> +91 7673686578</p></li>
                     <li> <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p></li>
                 </ul>
-                <ul class="social_wrp">
+                <!-- <ul class="social_wrp">
                     <li><i class="fab fa-facebook"></i></li> 
                     <li><i class="fab fa-twitter"></i></li>
                     <li><i class="fab fa-instagram"></i></li>
                     <li><i class="fab fa-youtube"></i></li>   
-                </ul>
-                <div class="subscribe">
+                </ul> -->
+                <!-- <div class="subscribe">
                     <h3>Subscribe News Letter</h3>
                     <label for="#">
                         <input type="email" name="email2" id="email" placeholder="Email Address" autocapitalize="off">
@@ -710,15 +711,22 @@
                     <label for="#">
                         <input type="submit" id="Submit2" value="Submit">
                     </label>
-                </div>
+                </div> -->
+                <!-- address--map -->
+                     <div class="map" id="map"> 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.667836669861!2d77.08265451543087!3d28.45942779864452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d19833ba3a601%3A0x5bb156dca69a8a16!2sCosset%20World!5e0!3m2!1sen!2sin!4v1613469403668!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+                <!-- end---here -->
             </div>
             </div>
         </div>
         <div class="copyright_wrp">
             <div class="container">
                 <div class="copy_content">
-                    <p>Copyright ©2021 Cosset World. All Rights Reserved. </p>
-                    <p> | Terms & Conditions | Disclaimer</p>
+                    <div class="Ca1 Copycmn"><p>Copyright ©2021 Cosset   World. All Rights Reserved. </p></div>
+                    <div class="Ca2 Copycmn"><a href="contact.html" > contact us</a> 
+                        | &nbsp; <a href="privacy.html" > Privacy policy</a> 
+                        | &nbsp; <a href="terms.html" > Terms & Conditions</a>  </div> 
                 </div>
             </div>
         </div> 
@@ -737,6 +745,13 @@
     <script src="js/vanilla-tilt.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/wow.min.js"></script>
+    <!-- <script>
+        var map = L.map('map', {
+        center: [28.459423108607744, 77.08484320000002],
+        zoom: 18
+        }); 
+    </script> -->
+    <!-- https://maps.googleapis.com/maps/api/staticmap?key=YOUR_API_KEY&center=28.459423108607744,77.08484320000002&zoom=18&format=png&maptype=roadmap&size=480x360 -->
     <script>
         new WOW().init();
     </script>
