--- a/privacy.html
+++ b/privacy.html
@@ -253,52 +253,29 @@
                     </div>
                     <div class="Slim_content">
                         <p>
-                            This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.
-                         </p>
-                        <h2>
-                            Interpretation
-                        </h2>
-                        <p>
-                            The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.
+                            The privacy of visitors to Cosset World is an important concern to us as well as to the Internet at-large. Here's how we support privacy and use data. 
                         </p>
                         <h2>
-                            Definitions
+                            Cosset World.in does NOT:
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga magni tenetur qui, dolorem eveniet ea at aut magnam necessitatibus voluptate repudiandae. Dolorum dignissimos asperiores voluptatem. 
-                            Earum minima ipsa libero consequuntur.
+                            Provide or release names or e-mail addresses of visitors or members of our mailing list to any third party without the member's explicit permission.
+                        </p>
+                        <p>Cosset World.in does not and will not use cookies or any other technology to track or report on member activity when they are not on Cosset World.in, nor pass member data to other Web sites.</p>
+                        <h2>Cosset World.in may use visitor data to:</h2>
+                        <p>Direct editorial content to visitors who are most likely to be interested in information about specific subject matter.</p>
+                        <p>Determine the advertisements to be seen by a visitor while using Cosset World.in.</p>
+                        <p>Prevent repetition: Internet "cookie" technology may be used to prevent repetitive requests to a visitor, such as accepting a disclaimer statement or filling out a questionnaire.</p>
+                         <p>
+                            Measure site activity: Cookie technology may also be used by Cosset World.in to determine which features and services are important to which audiences so that we may know where to invest our ongoing development and creative efforts.
+                        </p>
+                        <p>
+                            Advise visitors of recent news and features: Cosset World.in periodic email updates provide visitors who voluntarily sign up for our mailing list with headlines of recent news stories posted on the site, along with notice of new features. (Instructions for "unsubscribing" are provided in each update.)
                         </p>
                     </div>
                 </div>
             </section> 
-            <!-- end---here -->
- 
-
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp
-            Privacy_wrp" data-aos="fade-up"
-            data-aos-easing="linear"
-            data-aos-duration="1300">
-                <div class="container">
-                    <div class="Benefit-heading">
-                        <h2>Tracking Technologies  <span>and Cookies</span></h2>
-                    </div>
-                    <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
-                        <p>
-                            We use Cookies and similar tracking technologies to track the activity on Our Service and store certain information. Tracking technologies used are beacons, tags, and scripts to collect and track information and to improve and analyze Our Service. The technologies We use may include:
-                        </p>
-                        <ul>
-                            <li>Can be used to treat unwanted hair from face, leg, arm, underarms, and other areas without any significant pain. </li>
-                            <li>Removes hair safely without causing any skin damage.</li>
-                            <li>The speedy procedure as laser light can remove a significant fraction of hairs in short time.</li>
-                            <li>Laser hair removal results in permanent reduction of hairs. Some hairs which are left after treatment are lighter and thinner compared to the baseline.</li>
-                            <li>Restores normal range of motion and physical function</li>
-                            <li>It damages the hair follicles stopping the growth of new hair without affecting the skin tone or texture.
-                            </li>
-                            <li>Best results are obtained in people with light skin and darker hair, but good enough response can be achieved in people with other skin color types too.</li> 
-                        </ul> 
-                    </div>
-                </div>
-            </section>
+            <!-- end---here --> 
             
     </div> 
         
