--- a/hairtransplant.html
+++ b/hairtransplant.html
@@ -356,7 +356,10 @@
                         <h2>Hair transplant<span> Surgery Before & after</span></h2>
                     </div>
                     <div class="Filler-content organic-peel-content Thread-cnt01 hair-trn-Cnt01"> 
-                         <div class="Hair-Bfr-content">
+                        <figure>
+                            <img src="image/hair-transplant.png" alt="img">
+                        </figure>
+                         <!-- <div class="Hair-Bfr-content">
                              <div class="lft hair-cnt01">
                                  <figure>
                                      <img src="image/man-before.png" alt="img">
@@ -373,7 +376,7 @@
                                    <img src="image/girl-after1.png" alt="img">
                                </figure> 
                             </div>
-                         </div>
+                         </div> -->
                     </div>
                 </div>
             </section>
